--- a/public/index.html
+++ b/public/index.html
@@ -5,27 +5,31 @@
     window.addEventListener('load', async () => {
     // Modern dapp browsers...
     if (window.ethereum) {
-        window.web3 = new Web3(ethereum);
-        try {
-            // Request account access if needed
-            await ethereum.enable();
-            // Acccounts now exposed
-            web3.eth.sendTransaction({/* ... */});
-        } catch (error) {
-            // User denied account access...
-        }
-    }
-    // Legacy dapp browsers...
-    else if (window.web3) {
-        window.web3 = new Web3(web3.currentProvider);
-        // Acccounts always exposed
-        web3.eth.sendTransaction({/* ... */});
-    }
-    // Non-dapp browsers...
-    else {
-        console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
-    }
+       window.web3 = new Web3(window.ethereum);
+       try {
+         // Request account access if needed
+         await window.ethereum.enable();
+         // Acccounts now exposed
+         this.web3.eth.sendTransaction({/* ... */ });
+       } catch (error) {
+         // User denied account access...
+       }
+     }
+     // Legacy dapp browsers...
+     else if (window.web3) {
+       window.web3 = new Web3(this.web3.currentProvider);
+       // Acccounts always exposed
+       this.web3.eth.sendTransaction({/* ... */ });
+     }
+     // Non-dapp browsers...
+     else {
+       console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
+     }
 });
+
+
+
+
     </script>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
